recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:2: error: '(' expected but identifier found.
  if steps==0 { forward(0) } else { forward(length) ; left(angle) ; spiral(steps-1,angle,length+increment,increment) ;}
     ^Spiral:3: error: illegal start of simple expression
} 
^